--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "build": "tsc",
     "db:create": "node ./dist/database.config",
-    "db:load": "aqui vai o run do dist/extract.report",
+    "db:extract": "node ./dist/extract.report",
     "cy:open": "cypress open",
-    "cy:run": "cypress run --reporter mochawesome",
-    "test": "cypress run",
-    "setup": "run-s build db:create"
+    "cy:run": "cypress run",
+    "cy:merge": "mochawesome-merge ./mochawesome-report/*.json > ./report/output.json",
+    "test": "run-s cy:run cy:merge",
+    "setup": "run-s build db:create",
+    "extract": "run-s build db:extract"
   },
   "repository": {
     "type": "git",
@@ -34,14 +36,15 @@
   },
   "homepage": "https://github.com/quatoo/cypress-mochawesome-to-mysql#readme",
   "devDependencies": {
+    "@types/mochawesome": "^6.2.1",
     "cypress": "^9.6.1",
-    "jsonpath": "^1.1.1",
     "mochawesome": "^7.1.3",
     "mysql2": "^2.3.3",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "mochawesome-merge": "^4.2.1"
   }
 }
