--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"baseUrl": "./src",
         "moduleResolution": "node",
         "esModuleInterop": true,
-        "removeComments": true,
+        "removeComments": true
     },
     "include": ["src"],
     "exclude": ["node_modules"]
